@startuml
title Class Diagram - Use Case: Xem chi tiết sản phẩm
skinparam classAttributeIconSize 0

class ProductController {
  + getProductDetail(id: Long): String
}

class ProductService {
  + getProductDetailById(id: Long): ProductDetailResponse
}

class Product {
  - id: Long
  - sku: String
  - name: String
  - shortDescription: String
  - description: String
  - basePrice: BigDecimal
  - comparePrice: BigDecimal
  - gender: Gender
  - isActive: boolean
  - averageRating: Double
}

class ProductImage {
  - id: Long
  - imageUrl: String
  - isPrimary: boolean
  - sortOrder: int
}

class ProductVariant {
  - id: Long
  - size: String
  - price: BigDecimal
  - stockQuantity: int
}

class Review {
  - id: Long
  - rating: int
  - comment: String
  - isApproved: boolean
  - createdAt: LocalDateTime
}

class Category {
  - id: Long
  - name: String
}

class Brand {
  - id: Long
  - name: String
}

class Material {
  - id: Long
  - name: String
}

ProductController --> ProductService : uses
ProductService ..> Product : queries
Product "1" *-- "0..*" ProductImage : contains
Product "1" *-- "1..*" ProductVariant : contains
Product "1" *-- "0..*" Review : has
Product "N" -- "1" Category : belongs to
Product "N" -- "1" Brand : belongs to
Product "N" -- "1" Material : made of

@enduml